# axum-http-auth-example

./: .gitignore  Cargo.toml  Makefile  Readme.md
db/: schema.sql
src/: main.rs
templates/: _base.html  account.html  index.html  login.html  signup.html
